# NanoFactoryTools

./: .gitignore  README.md  pyproject.toml
nanofactorytools/: __init__.py  focus.py  grid.py  image.py  layer.py  plane.py  stitch.py
test/: __ZLINE__.OGM  __zline__.pgm  eval_auto.py  test.py  test1.py  test_focus.py  test_grid.py  test_layer.py  test_pitch.py  test_plane.py  test_stitch.py
test/test/focus/: back.zdc  focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/: back.zdc  layer.zdc
test/test/layer/focus/focus-00/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-01/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-02/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-03/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-04/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-05/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-06/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-07/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-08/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-09/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-10/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-11/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-12/: focus.zdc  image_post.zdc  image_pre.zdc
test/test/layer/focus/focus-13/: focus.zdc  image_post.zdc  (+1 more)
test/test/plane/: back.zdc
(+195 files in other folders)
