# pyproject.toml
[build-system]
requires = [
    "setuptools",
	"NumPy",
	"SciPy",
	"SciDataContainer",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "nanofactorytools",
]

[project]
name = "NanoFactoryTools"
version = "0.3.0"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package containing tools for the Laser Nanofactory system from Femtika."
readme = "README.md"
dependencies = [
    'NumPy>=1.15',
    'SciDataContainer>=1.1',
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
